<resources>
    <string name="app_name">TestCoffeeToGo</string>
    <string name="ueber">Über</string>
    <string name="ueber_text">Grafiken von Icons8.com\n\nDiese App wurde nach Anleitung von Droid-Lernen.de erstellt und steht under der Apache 2.0 Lizenz</string>
    <string name="ok">OK</string>
    <string name="settings">Known API parameters</string>
    <string name="username">Username</string>
    <string name="url">Known URL</string>
    <string name="https">https://</string>
    <string name="api">Known user API</string>
    <string name="hint_api"><![CDATA[(see account settings->tools&apps)]]></string>
    <string name="about">About</string>
    <string name="toast_settings">Settings</string>
    <string name="set_save">Save</string>
    <string name="empty_api">API must be filled in</string>
    <string name="empty_username">Username must be filled in</string>
    <string name="empty_url">Known Url must be filled in</string>
    <string name="settings_saved">Settngs saved</string>
    <string name="all_saved">settings saved</string>
    <string name="empty_hash">Could\'nt create hash value</string>
    <string name="noNetwork">No network connection found</string>
    <string name="networkOk">NETWORK FOUND</string>
    <string name="services">Syndication Services</string>
    <string name="retrievedata">Retrieving data...</string>
    <string name="set_edit">edit</string>
    <string name="dial_username">Edit username</string>
    <string name="alert_dialog">Edit connection values</string>
    <string name="cancel">Cancel</string>
</resources>
